--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Content/Developers
 Content/FantasyOrchestral
 Content/Paragon*
 Content/SciFiWeap*
+Content/Vehicles
 DerivedDataCache
 Intermediate
 Saved
