--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ Content/Developers
 Content/FantasyOrchestral
 Content/Paragon*
 Content/SciFiWeap*
+Content/Tropical_Jungle_Pack
 Content/Vehicles
 DerivedDataCache
 Intermediate
