--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ Binaries
 Config
 Content/Collections
 Content/Developers
+Content/EletricField
 Content/FantasyOrchestral
-Content/Paragon*
+Content/ParagonWraith
 Content/SciFiWeap*
 Content/Tropical_Jungle_Pack
 Content/Vehicles
