--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ Content/ParagonWraith
 Content/SciFiWeap*
 Content/Tropical_Jungle_Pack
 Content/Vehicles
+Content/BattleRoyal/Maps
 DerivedDataCache
 Intermediate
 Saved
